# address-toolkit

./: AI.gitignore  CODEOWNERS  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tutorial.ipynb
.github/workflows/: CODEOWNERS  python-package.yml  python-publish.yml
address_toolkit/cleaning/: __init__.py  cleaning.py
address_toolkit/contextualising/: __init__.py  contextualising.py
address_toolkit/extracting/: __init__.py  extracting.py
address_toolkit/resources/: __init__.py  resources.py
address_toolkit/tests/: __init__.py  test_cleaning.py  test_contextualising.py  test_extracting.py  test_imports.py  test_validating.py
address_toolkit/utilities/: __init__.py  utilities.py
address_toolkit/validating/: __init__.py  validating.py
address_toolkit/workflows/: __init__.py  workflows.py
analysis/: analysis.ipynb
package_maintenance/: README.md  resource_maintenance.ipynb
